--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -6,4 +6,16 @@ jobs:
   UnitTests:
     runs-on: ubuntu-22.04
     steps:
-      - run: echo Hello Worlddd
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install deps
+        run: npm install
+
+      - name: Run unit tests
+        run: npm run test
