--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,5 +20,8 @@ jobs:
       - name: Run unit tests
         run: npm run test
 
+  E2ETests:
+    runs-on: ubuntu-22.04
+    steps:
       - name: Run e2e tests
         run: npm run e2e:run
