--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -36,3 +36,21 @@ jobs:
 
       - name: Run e2e tests
         run: npm run e2e:run
+
+  Build:
+    runs-on: ubuntu-22.04
+    needs: [UnitTests, E2ETests]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install deps
+        run: npm install
+
+      - name: Run e2e tests
+        run: npm run build
