--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -40,6 +40,9 @@ jobs:
   Build:
     runs-on: ubuntu-22.04
     needs: [UnitTests, E2ETests]
+    permissions:
+      contents: write
+      id-token: write
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -52,5 +55,14 @@ jobs:
       - name: Install deps
         run: npm install
 
-      - name: Run e2e tests
+      - name: Init deployment URL
+        run: echo "PUBLIC_URL=${{vars.PUBLIC_URL}}/${{github.head_ref}}" >> $GITHUB_ENV
+
+      - name: Build application
         run: npm run build
+
+      - uses: JamesIves/github-pages-deploy-action@4.4.1
+        with:
+          folder: ./build
+          target-folder: ${{github.head_ref}}
+          clean: false
