--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -43,6 +43,9 @@ jobs:
     permissions:
       contents: write
       id-token: write
+    environment:
+      name: staging
+      url: ${{env.PUBLIC_URL}}/
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -61,7 +64,8 @@ jobs:
       - name: Build application
         run: npm run build
 
-      - uses: JamesIves/github-pages-deploy-action@4.4.1
+      - uses: JamesIves/github-pages-deploy-action@v4.4.1
+        id: deployment
         with:
           folder: ./build
           target-folder: ${{github.head_ref}}
