--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,17 @@
 name: Deploy
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      versionType:
+        type: choice
+        description: "Semver"
+        default: "patch"
+        required: true
+        options:
+          - patch
+          - minor
+          - major
 
 jobs:
   Build:
